# invenio-theme

./: .editorconfig  .git-blame-ignore-revs  .gitignore  .travis.yml  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  INSTALL.rst  MAINTAINERS  MANIFEST.in  README.rst  RELEASE-NOTES.rst  pyproject.toml  pytest.ini  requirements-devel.txt  run-tests.sh  setup.cfg  setup.py
.github/workflows/: i18n-extract.yml  i18n-pull.yml  i18n-push.yml  pypi-publish.yml  tests.yml  translations.yml
.tx/: config
docs/: Makefile  api.rst  conf.py  configuration.rst  examplesapp.rst  index.rst  make.bat  usage.rst
example/: app.py
example/templates/: cover.html  index.html
example/templates/settings/: base.html  item1.html  item2.html
examples/: app-setup.sh  app-teardown.sh  app.py
examples/templates/: cover.html  index.html
examples/templates/settings/: base.html  item1.html  item2.html
invenio_theme/: __init__.py  bundles.py  config.py  core.py  ext.py  icons.py  proxies.py  shared.py  version.py  views.py  webpack.py
invenio_theme/assets/js/invenio_theme/: admin.js  base.js
invenio_theme/assets/scss/invenio_theme/: admin.scss  body.scss  footer.scss  input-icon.scss  navbar.scss  styles.scss  type.scss  variables.scss
invenio_theme/static/fonts/: invenio-font-awesome.eot
invenio_theme/static/js/: base.js  build.js  settings.js
invenio_theme/static/js/invenio_theme/: admin.js
invenio_theme/static/less/invenio_theme/: footer.less  styles.less  type.less  variables.less
invenio_theme/static/scss/invenio_theme/: admin.scss  angular.scss  body.scss  cover.scss  footer.scss  header.scss  input-icon.scss  invenio-font-awesome.scss  styles.scss  type.scss  variables.scss
invenio_theme/templates/invenio_theme/: 401.html  403.html  404.html  429.html  500.html  admin.html  admin_header.html  admin_layout.html  body.html  breadcrumbs.html  error.html  footer.html  frontpage.html  header.html  header_frontpage.html  header_login.html  javascript.html  page.html  page_admin.html  page_cover.html  page_error.html  page_settings.html  trackingcode.html
invenio_theme/templates/invenio_theme/macros/: messages.html  truncate.html
invenio_theme/templates/invenio_theme/settings/: base.html  content.html  menu.html
invenio_theme/templates/semantic-ui/invenio_theme/: 401.html  403.html  404.html  429.html  500.html  admin_header.html  admin_layout.html  body.html  breadcrumbs.html  footer.html  frontpage.html  header.html  header_frontpage.html  header_login.html  javascript.html  page.html  page_admin.html  page_cover.html  page_error.html  page_settings.html
invenio_theme/translations/: messages.pot
invenio_theme/translations/af/LC_MESSAGES/: messages.po
invenio_theme/translations/ar/LC_MESSAGES/: messages.po
invenio_theme/translations/bg/LC_MESSAGES/: messages.po
invenio_theme/translations/ca/LC_MESSAGES/: messages.po
invenio_theme/translations/cs/LC_MESSAGES/: messages.po
invenio_theme/translations/da/LC_MESSAGES/: messages.po
invenio_theme/translations/de/LC_MESSAGES/: messages.po
invenio_theme/translations/de_AT/LC_MESSAGES/: messages.po
invenio_theme/translations/de_DE/LC_MESSAGES/: messages.po
invenio_theme/translations/el/LC_MESSAGES/: messages.po
invenio_theme/translations/en_AT/LC_MESSAGES/: messages.po
invenio_theme/translations/en_HU/LC_MESSAGES/: messages.po
invenio_theme/translations/es/LC_MESSAGES/: messages.po
invenio_theme/translations/es_CU/LC_MESSAGES/: messages.po
invenio_theme/translations/es_MX/LC_MESSAGES/: messages.po
invenio_theme/translations/et/LC_MESSAGES/: messages.po
invenio_theme/translations/et_EE/LC_MESSAGES/: messages.po
invenio_theme/translations/fa/LC_MESSAGES/: messages.po
invenio_theme/translations/fa_IR/LC_MESSAGES/: messages.po
invenio_theme/translations/fi/LC_MESSAGES/: messages.po
invenio_theme/translations/fr/LC_MESSAGES/: messages.po
invenio_theme/translations/fr_CI/LC_MESSAGES/: messages.po
invenio_theme/translations/fr_FR/LC_MESSAGES/: messages.po
invenio_theme/translations/gl/LC_MESSAGES/: messages.po
invenio_theme/translations/hi_IN/LC_MESSAGES/: messages.po
invenio_theme/translations/hr/LC_MESSAGES/: messages.po
invenio_theme/translations/hu/LC_MESSAGES/: messages.po
invenio_theme/translations/hu_HU/LC_MESSAGES/: messages.po
invenio_theme/translations/it/LC_MESSAGES/: messages.po
invenio_theme/translations/ja/LC_MESSAGES/: messages.po
tests/: conftest.py  helpers.py  test_examples_app.py  test_invenio_theme.py  test_invenio_theme_error_handler.py
(+153 files in other folders)
