# -*- coding: utf-8 -*-
#
# This file is part of Invenio.
# Copyright (C) 2015-2018 CERN.
# Copyright (C) 2022 Graz University of Technology.
#
# Invenio is free software; you can redistribute it and/or modify it
# under the terms of the MIT License; see LICENSE file for more details.

[metadata]
name = invenio-theme
version = attr: invenio_theme.__version__
description = "Invenio standard theme."
long_description = file: README.rst, CHANGES.rst
keywords = invenio
license = MIT
author = Invenio Collaboration
author_email = info@inveniosoftware.org
platforms = any
url = https://github.com/inveniosoftware/invenio-theme
classifiers =
    Development Status :: 5 - Production/Stable

[options]
include_package_data = True
packages = find:
python_requires = >=3.6
zip_safe = False
install_requires =
    Flask-Breadcrumbs>=0.4.0
    Flask-Menu>=0.5.0
    invenio-assets>=1.2.7
    invenio-base>=1.2.5
    invenio-i18n>=1.3.1
    jsmin>=3.0.0

[options.extras_require]
tests =
    pytest-invenio>=1.4.2
    Sphinx==4.2.0
# Kept for backwards compatibility
docs =

[options.entry_points]
invenio_assets.webpack =
    invenio_theme = invenio_theme.webpack:theme
invenio_base.apps =
    invenio_theme = invenio_theme:InvenioTheme
invenio_i18n.translations =
    messages = invenio_theme

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[compile_catalog]
directory = invenio_theme/translations/
use-fuzzy = True

[extract_messages]
copyright_holder = CERN
msgid_bugs_address = info@inveniosoftware.org
mapping-file = babel.ini
output-file = invenio_theme/translations/messages.pot
add-comments = NOTE

[init_catalog]
input-file = invenio_theme/translations/messages.pot
output-dir = invenio_theme/translations/

[update_catalog]
input-file = invenio_theme/translations/messages.pot
output-dir = invenio_theme/translations/
